# nyc-mobility-weather-analytics

./: .dockerignore  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  .sqlfluff  CITIBIKE_GAP_ANALYSIS.md  CITIBIKE_REINGEST_PLAN.md  DASHBOARD_README.md  Dockerfile  LICENSE  MONTHLY_LOADING_QUICKSTART.md  QUICKSTART_DATA_QUALITY.md  README.md  backfill_june_2025.yaml  check_citibike_sources.py  cleanup.sh  dagster_cloud.yaml  dashboard.py  dashboard_data_quality.py  investigate_citibike_gaps.py  pyproject.toml  start_analytics_dashboard.sh  start_quality_dashboard.sh  stop_dashboards.sh
.github/workflows/: ci.yml  deploy.yml
config/: README.md  ingestion.yaml
dbt/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/metrics/: metrics.yml
dbt/models/elementary/: schema.yml
dbt/models/marts/core/: dim_date.sql  dim_location.sql  dim_time.sql  dim_weather.sql  fct_hourly_mobility.sql  fct_trips.sql  metricflow_time_spine.sql  schema.yml
dbt/models/marts/core/metrics/: metrics_mode_share.yml  metrics_time_patterns.yml  metrics_trips_core.yml  metrics_weather_impact.yml
dbt/models/marts/core/semantic_models/: sem_hourly_mobility.yml  sem_trips.yml
dbt/models/staging/citibike/: _citibike__models.yml  _citibike__sources.yml  stg_citibike__trips.sql
dbt/models/staging/tlc/: _tlc__models.yml  _tlc__sources.yml  stg_tlc__fhv_taxi.sql  stg_tlc__yellow_taxi.sql
dbt/models/staging/weather/: _weather__models.yml  _weather__sources.yml  stg_weather__hourly.sql
dbt/semantic_models/: trips.yml
dbt/tests/: assert_monthly_data_completeness.sql  assert_no_date_gaps.sql  assert_weather_join_coverage_100pct.sql
docs/: ARCHITECTURE.md  BACKFILL_IMPLEMENTATION.md  DASHBOARDS.md  DLT_INTEGRATION_SUMMARY.md  GREAT_EXPECTATIONS_STATUS.md  IDEMPOTENCY_ANALYSIS.md  IDEMPOTENCY_IMPLEMENTATION.md  MVP2_COMPLETION_SUMMARY.md  MVP3_CHANGES.md  MVP3_PROGRESS_REPORT.md  PIPELINE_OPERATIONS_GUIDE.md  WEATHER_DATA_COVERAGE_REPORT.md  data_dictionary.md  data_model.md  erd.html  setup.md
great_expectations/: .gitignore  README.md  create_expectation_suites.py  great_expectations.yml  run_validations.py  validate_context.py
great_expectations/checkpoints/: .ge_store_backend_id  chk_dim_date.yml  chk_dim_location.yml  chk_dim_time.yml  chk_dim_weather.yml  chk_fct_hourly_mobility.yml  chk_fct_trips.yml  chk_stg_citibike.yml  chk_stg_fhv_taxi.yml  chk_stg_weather.yml  chk_stg_yellow_taxi.yml
great_expectations/expectations/: .ge_store_backend_id  dim_date.json  dim_location.json  dim_time.json  dim_weather.json  fct_hourly_mobility.json  fct_trips.json  stg_citibike__trips.json  stg_fhv_taxi.json  stg_weather__hourly.json  stg_yellow_taxi.json
notebooks/: 01_data_ingestion_validation.ipynb  01_data_ingestion_validation_executed.ipynb  01_pipeline_operations.ipynb  02_data_exploration_and_metrics.ipynb  02_data_exploration_and_metrics_executed.ipynb  02_data_quality_assessment.ipynb  02_data_quality_assessment_executed.ipynb  03_SEMANTIC_LAYER_GUIDE.md  03_exploratory_analysis.ipynb  03_exploratory_analysis_executed.ipynb  03_semantic_models_and_metrics.ipynb  03_semantic_models_and_metrics_executed.ipynb  README.md
notebooks/marimo/: 01_exploration.py
orchestration/: MONTHLY_INGESTION_GUIDE.md  README.md  __init__.py  dagster.yaml  jobs.py  validate_definitions.py  workspace.yaml
orchestration/assets/: __init__.py  dbt_assets.py  dlt_assets.py  documentation_assets.py  monthly_ingestion.py
orchestration/resources/: __init__.py
orchestration/schedules/: __init__.py
scripts/: dagster_monthly_backfill.py  quick_test_incremental.sh  run_monthly_backfill.sh  run_pipeline.sh  test_idempotency.sh
scripts/setup/: init_env.sh
src/: __init__.py
src/api/: __init__.py
src/ingestion/: __init__.py  dlt_config.py  errors.py  run_pipeline.py
src/ingestion/sources/: __init__.py  citibike.py  taxi.py  weather.py
src/utils/: __init__.py  config.py  logger.py  retry.py
tests/: __init__.py  conftest.py
tests/integration/: test_dlt_pipeline.py  test_retry_behavior.py
tests/unit/: test_citibike_source.py  test_config.py  test_taxi_source.py  test_weather_source.py
tmpjnvmf9r0/storage/: monthly_data_validation  monthly_dbt_transformation  monthly_dlt_ingestion  monthly_ge_validation
tmpjnvmf9r0/storage/ca689360-9d5b-4cee-be68-4d926d9be3b8/compute_logs/: ewuulaqx.err  kphbpkan.err  kphbpkan.out  tddcqfuc.err  wqvtzdps.err
tmpjxlo69z9/history/: runs.db-shm  runs.db-wal
tmpvxdhpv0z/history/: runs.db-shm  runs.db-wal
tmpvxdhpv0z/storage/: monthly_data_validation  monthly_dbt_transformation  monthly_dlt_ingestion
tmpvxdhpv0z/storage/04840eff-8f9d-4654-9f46-27009e3cd69e/compute_logs/: xrluklrd.err
tmpvxdhpv0z/storage/352f400c-da69-44f8-8685-424b817e6907/compute_logs/: zczxcvaq.err
tmpvxdhpv0z/storage/95735dfa-7360-4149-9bce-8aab07555d5c/compute_logs/: brwioptu.err
tmpvxdhpv0z/storage/a9b82af9-193d-4086-b84d-fbeda1d7056d/compute_logs/: gbjwutam.err  sjijaitu.err
tmpvxdhpv0z/storage/abaaf73b-46ac-410e-8d4e-1ffeca47d67a/compute_logs/: kwzyutdb.err
tmpvxdhpv0z/storage/ad50db19-9468-4996-a83d-af1ccac3151a/compute_logs/: gnhihhpl.err  ldayljui.err  oxrwpkdo.err
tmpvxdhpv0z/storage/bce26272-8b8e-4c73-a29f-187a998197ed/compute_logs/: cwsljbzd.err  skozcgze.err  ujtedpkd.err
tmpvxdhpv0z/storage/d9c0efd2-1f31-48d1-8090-d4e24e67d4c3/compute_logs/: qggmynxj.err  rdxcouse.err  vskzzbjs.err
