[tool.poetry]
name = "nyc-mobility-weather-analytics"
version = "0.1.0"
description = "A modern data engineering project analyzing how weather affects NYC taxi and CitiBike usage"
authors = ["Brandon Gay <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Data ingestion (MVP 1)
dlt = {extras = ["duckdb"], version = "^0.4.0"}
# Data processing (MVP 1)
pandas = "^2.2.0"
pyarrow = "^15.0.0"
duckdb = "^0.10.0"
# API clients (MVP 1)
requests = "^2.31.0"
httpx = "^0.27.0"
# Visualization (MVP 1)
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
# Environment management
python-dotenv = "^1.0.0"
# MVP 2: dbt + orchestration + data quality
dbt-core = "^1.7.0"
dbt-duckdb = "^1.7.0"
dagster = "*"
dagster-dbt = "*"
dagster-webserver = "*"
great-expectations = "^0.18.0"
duckdb-engine = "^0.17.0"
streamlit = "^1.52.2"
plotly = "^6.5.1"
watchdog = "~4.0.0"
tenacity = "^9.1.2"
dagster-cloud = "^1.12.11"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
# Code quality
ruff = "^0.3.0"
sqlfluff = "^3.0.0"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
# Development tools
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".git",
    "dbt/target",
    "dbt/dbt_packages",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
