[project]
name = "nyc-mobility-weather-analytics"
version = "0.1.0"
description = "A modern data engineering project analyzing how weather affects NYC taxi and CitiBike usage"
readme = "README.md"
authors = [
    { name = "Brandon Gay", email = "your.email@example.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dlt[duckdb,gcp]>=1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "dbt-core>=1.7.0,<2.0.0",
    "dbt-duckdb>=1.7.0,<2.0.0",
    "dagster",
    "dagster-dbt",
    "dagster-webserver",
    "duckdb-engine>=0.17.0",
    "streamlit>=1.52.2,<2.0.0",
    "plotly>=6.5.1,<7.0.0",
    "watchdog>=4.0.0,<5.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "dagster-cloud>=1.12.11,<2.0.0",
    "elementary-data>=0.9.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.3.0,<0.4.0",
    "sqlfluff>=3.0.0,<4.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "mypy>=1.8.0,<2.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.29.0,<7.0.0",
    "marimo>=0.1.6,<0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".git",
    "dbt/target",
    "dbt/dbt_packages",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
